# genesis-exam-maker

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  requirements.txt  uninstall.sh
core/: database_manager.py  exam_builder.py  import_export_manager.py  latex_generator.py  logger_config.py
data/: klausur.db
gui/: add_task_tab.py  app_styles.py  generate_exam_tab.py  import_export_tab.py  main_window.py  management_tab.py  splash_screen.py
web/css/: style.css
web/js/: main.js  view_module.js  view_pool.js
web/templates/: index.html  loading.html  view_module.html  view_pool.html
